...

<!--            <LinearLayout-->
<!--                    android:id="@+id/selectProjectLayout"-->
<!--                    style="@style/_linear_layout">-->

...

<!--                <Spinner-->
<!--                        android:id="@+id/contractSpinner"-->
<!--                        style="@style/_default"-->
<!--                        android:layout_marginTop="@dimen/xsmall" />-->
...

<!--                <androidx.appcompat.widget.AppCompatEditText-->
<!--                        android:id="@+id/descriptionEditText"-->
<!--                        style="@style/_default"-->
<!--                        android:layout_marginLeft="@dimen/xsmall"-->
...
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:id="@+id/selectContractProjectContinueButton"-->
<!--                        android:layout_margin="@dimen/small"-->
<!--                        android:text="Confirm Project Selection" />-->

<!--            </LinearLayout>-->
...
<!--            <LinearLayout-->
<!--                    style="@style/_linear_layout"-->
<!--                    android:id="@+id/mid_lin">-->

<!--                <androidx.cardview.widget.CardView-->
...

<!--                <LinearLayout-->
<!--                        android:id="@+id/addItemLayout"-->
<!--                        style="@style/_linear_layout_horiz"-->
<!--                        android:layout_marginTop="@dimen/small"-->
...

<!--                    <ImageButton-->
<!--                            android:id="@+id/addItemButton"-->
<!--                            style="@style/Base.Widget.AppCompat.Button.Borderless"-->
<!--                            android:layout_width="56dp"-->
...

<!--            <LinearLayout-->
<!--                    android:id="@+id/selectProjectItemdrop"-->
<!--                    style="@style/_linear_layout">-->

...

<!--                    <Spinner-->
<!--                            android:id="@+id/sectionItemSpinner"-->
<!--                            style="@style/_default"-->
<!--                            android:layout_margin="@dimen/small" />-->
...

<!--            <LinearLayout-->
<!--                    android:id="@+id/photoLin"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
...

<!--                            <Button-->
<!--                                    android:id="@+id/startPhotoButton"-->
<!--                                    style="@style/_button"-->
<!--                                    android:drawableLeft="@drawable/ic_baseline_photo_camera_24px"-->
...

<!--                            <Button-->
<!--                                    android:id="@+id/endPhotoButton"-->
<!--                                    style="@style/_button"-->
<!--                                    android:layout_width="match_parent"-->
...

<!--                        <EditText-->
<!--                                android:id="@+id/valueEditText"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
...

<!--                    <Button-->
<!--                            android:id="@+id/updateButton"-->
<!--                            style="@style/_button"-->
<!--                            android:layout_width="0dp"-->
...
<!--                            android:layout_margin="@dimen/small"-->
<!--                            android:layout_weight="1"-->
<!--                            android:text="UPDATE" />-->
<!--                </LinearLayout>-->

...

<!--            <LinearLayout-->
<!--                    android:id="@+id/last_lin"-->
<!--                    style="@style/_linear_layout">-->

...

<!--                <androidx.cardview.widget.CardView-->
<!--                        android:id="@+id/dueDateCardView"-->
<!--                        style="@style/_default"-->
<!--                        android:layout_marginLeft="@dimen/xsmall"-->
...

<!--                <Button-->
<!--                        android:id="@+id/submitButton"-->
<!--                        style="@style/_button"-->
<!--                        android:layout_marginLeft="@dimen/xsmall"-->
<!--                        android:layout_marginTop="@dimen/medium"-->
<!--                        android:layout_marginRight="@dimen/xsmall"-->
<!--                        android:text="submit" />-->

<!--            </LinearLayout>-->
...
