...
  * Updated by Shaun McDonald on 2021/02/04
  * Last modified on 2021/02/04 12:13 PM
  * Copyright (c) 2021.  XI Systems  - All rights reserved
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="error_getting_image">There was an Error writing your image to your phone</string>
    <string name="place_quantity">Please place a Quantity</string>
    <string name="no_section_for_project">Picture falls outside of the project section.</string>

...
    <string name="decline_job">Decline Job</string>
    <string name="approve_job">Approve Job</string>
    <string name="approve">Approve</string>
    <string name="correct_estimate">Correct Estimates</string>
    <string name="correct_measure">Correct Measurements</string>
    <string name="end_km">End Km</string>
    <string name="end">End</string>
    <string name="enter_quantity_measured">"Enter quantity measured "</string>
    <string name="job_no_approved">Job %1$s Approved</string>
    <string name="job_declined">Job Declined</string>
    <string name="job_submitted">Job Submitted</string>
    <string name="jpg">.jpg</string>
    <string name="line_amount">Line Amount</string>
    <string name="line_rate">Line Rate</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="measurement">Measurement</string>
    <string name="measurement_approved">Measurement(s) approved</string>
    <string name="no">No</string>
    <string name="no_21">21</string>
    <string name="no_connection_detected">No connection detected.</string>
    <string name="none">NONE</string>
    <string name="ok">OK</string>
    <string name="captured_photos">Captured Photos</string>
    <string name="please_ensure_estimation_items_contain_photos">Please ensure Estimation Items contain photos</string>
    <string name="please_make_sure_workflow_items_contain_photos">Please make sure workflow Items contain photos</string>
    <string name="please_provide_a_comment">Please provide a short comment.</string>
    <string name="please_make_sure_you_have_captured_photos">Please make sure you\'ve captured photos for all measurement items.</string>
    <string name="please_enter_a_unique_pin">Please enter a Four Digit unique pin code and keep it in a safe place. You will use this pin to login in the future.</string>
...
    <string name="project">Project</string>
    <string name="project_items">Project items</string>
    <string name="qty">Qty</string>
    <string name="qty_123">QTY: 123</string>
    <string name="quantity">"Quantity : "</string>
    <string name="r5400">R5400</string>
    <string name="register">Register</string>
    <string name="reset_app">Reset App</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="reset_user">UpDate USER</string>
    <string name="save">Save</string>
    <string name="section">Section</string>
    <string name="some_super_long_item_name_in_case_it_gets_cut_off">Some super long item name in case it gets cut off</string>
    <string name="start">Start</string>
    <string name="start_km">Start Km</string>
    <string name="submit">Submit</string>
    <string name="submit_for_approval">Submit for Approval</string>
    <string name="submit_measurements_for_approval">Submit Measurements for Approval</string>
    <string name="new_job">New Job</string>
    <string name="total">Total</string>
...
