...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/reg_Things"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="120dp"
                    android:orientation="vertical"
...
                        android:gravity="center"
                        android:text="@string/please_enter_user_info"
                        android:textColor="@color/itis_gray"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/round_corner_orange"
                        android:hint="@string/enter_username"
                        android:importantForAutofill="noExcludeDescendants"
...
                            android:textColorHint="@android:color/white" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/round_corner_orange"
                        android:hint="@string/enter_password"
                        app:hintTextAppearance="@style/TextAppearance.AppCompat">
...
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_baseline_lock_white_24px"
                            android:drawableTint="@color/white"
                            android:ems="10"
                            android:gravity="start"
                            android:inputType="textPassword"
                            android:padding="4dp"
                            android:singleLine="true"

                            android:textColor="@android:color/white"
...
