...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainview.activities.jobmain.ui.select_items.SelectProjectItemsFragment" >

    <za.co.xisystems.itis_rrm.ui.mainview.activities.jobmain.ui.JobCreationToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
...

            <LinearLayout
                android:id="@+id/selectProjectItemdrop"
                style="@style/_linear_layout">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/item_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/project_item"
                    android:padding="5dp" />
            </LinearLayout>

...
